- General improvements and bug fixes

--- a/Source/Mosa.Compiler.Common/Mosa.Compiler.Common.csproj
+++ b/Source/Mosa.Compiler.Common/Mosa.Compiler.Common.csproj
@@ -56,6 +56,7 @@
     <Compile Include="EndianAwareBinaryWriter.cs" />
     <Compile Include="EndianAwareBinaryReader.cs" />
     <Compile Include="Endian.cs" />
+    <Compile Include="SparseBitArray.cs" />
     <Compile Include="StreamExtension.cs" />
     <Compile Include="UniqueStackThreadSafe.cs" />
     <Compile Include="UniqueQueueThreadSafe.cs" />
