--- a/Source/Mosa.Compiler.Framework.xUnit/Mosa.Compiler.Framework.xUnit.csproj
+++ b/Source/Mosa.Compiler.Framework.xUnit/Mosa.Compiler.Framework.xUnit.csproj
@@ -83,6 +83,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="LiveRangeTests.cs" />
+    <Compile Include="SparseBitArrayTests.cs" />
     <Compile Include="SimplePriorityQueueTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
