--- a/Source/Mosa.Kernel.ARMv6/Mosa.Kernel.ARMv6.csproj
+++ b/Source/Mosa.Kernel.ARMv6/Mosa.Kernel.ARMv6.csproj
@@ -78,7 +78,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
