--- a/Source/Mosa.Runtime.x64/Mosa.Runtime.x64.csproj
+++ b/Source/Mosa.Runtime.x64/Mosa.Runtime.x64.csproj
@@ -54,7 +54,8 @@
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>..\..\bin\Mosa.Runtime.x86.xml</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
     <FileAlignment>4096</FileAlignment>
     <Optimize>true</Optimize>
     <OutputPath>..\..\bin\</OutputPath>
