--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -297,7 +297,7 @@
     <Compile Include="Instructions\Ucomisd.cs" />
     <Compile Include="Instructions\Ucomiss.cs" />
     <Compile Include="Instructions\XAddLoad32.cs" />
-    <Compile Include="Instructions\Xchg32.cs" />
+    <Compile Include="Instructions\XChg32.cs" />
     <Compile Include="Instructions\XChgLoad32.cs" />
     <Compile Include="Instructions\Xor32.cs" />
     <Compile Include="Instructions\XorConst32.cs" />
