--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -363,6 +363,7 @@
     <Compile Include="X86Instructions.cs" />
     <Compile Include="Intrinsic\Jmp.cs" />
     <Compile Include="Intrinsic\Call.cs" />
+    <Compile Include="x86Opcode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
