Moved SSE Initialization code into kernel vs the compiler.

--- a/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
+++ b/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
@@ -67,6 +67,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="SSE.cs" />
     <Compile Include="IDTStack.cs" />
     <Compile Include="IOPort.cs" />
     <Compile Include="LZF.cs" />
