- Added a platform specific optimization around lea instruction

--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -340,6 +340,7 @@
     <Compile Include="Intrinsic\Sti.cs" />
     <Compile Include="CompilerStages\MethodTableBuilderStage.cs" />
     <Compile Include="CompilerStages\Multiboot0695Stage.cs" />
+    <Compile Include="Stages\OptimizationStage.cs" />
     <Compile Include="X86.cs" />
     <Compile Include="Stages\TweakStage.cs" />
     <Compile Include="Intrinsic\BochsDebug.cs" />
