--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -302,10 +302,12 @@
     <Compile Include="Intrinsic\SetFS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stages\BuildStackStage.cs" />
+    <Compile Include="Stages\OptimizationStage.cs" />
     <Compile Include="Stages\IRSubstitutionStage.cs" />
     <Compile Include="CompilerStages\StartUpStage.cs" />
     <Compile Include="Stages\FloatingPointStage.cs" />
     <Compile Include="Stages\FinalTweakStage.cs" />
+    <Compile Include="Stages\PostOptimizationStage.cs" />
     <Compile Include="Stages\SimpleDeadCodeRemovalStage.cs" />
     <Compile Include="Stages\AddressModeConversionStage.cs" />
     <Compile Include="Stages\FixedRegisterAssignmentStage.cs" />
