--- a/Source/Mosa.Platform.Intel/Mosa.Platform.Intel.csproj
+++ b/Source/Mosa.Platform.Intel/Mosa.Platform.Intel.csproj
@@ -80,18 +80,18 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompilerStages\StartUpStage.cs" />
     <Compile Include="ControlRegister.cs" />
     <Compile Include="GeneralPurposeRegister.cs" />
     <Compile Include="OpcodeEncoder.cs" />
     <Compile Include="SegmentRegister.cs" />
     <Compile Include="SSE2Register.cs" />
     <Compile Include="Stages\AddressModeConversionStage.cs" />
+    <Compile Include="Stages\BuildStackStage.cs" />
     <Compile Include="Stages\FloatingPointStage.cs" />
     <Compile Include="Stages\SimpleDeadCodeRemovalStage.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CompilerStages\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
