--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -304,7 +304,6 @@
     <Compile Include="Stages\BuildStackStage.cs" />
     <Compile Include="Stages\OptimizationStage.cs" />
     <Compile Include="Stages\IRSubstitutionStage.cs" />
-    <Compile Include="CompilerStages\StartUpStage.cs" />
     <Compile Include="Stages\FloatingPointStage.cs" />
     <Compile Include="Stages\FinalTweakStage.cs" />
     <Compile Include="Stages\PostOptimizationStage.cs" />
@@ -341,7 +340,7 @@
     <Compile Include="Intrinsic\Out8.cs" />
     <Compile Include="Intrinsic\Sti.cs" />
     <Compile Include="CompilerStages\MethodTableBuilderStage.cs" />
-    <Compile Include="CompilerStages\Multiboot0695Stage.cs" />
+    <Compile Include="CompilerStages\MultibootV1Stage.cs" />
     <Compile Include="X86.cs" />
     <Compile Include="Stages\TweakStage.cs" />
     <Compile Include="Intrinsic\BochsDebug.cs" />
