--- a/Source/Mosa.Platform.Intel/Mosa.Platform.Intel.csproj
+++ b/Source/Mosa.Platform.Intel/Mosa.Platform.Intel.csproj
@@ -80,6 +80,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompilerStages\MultibootV1Stage.cs" />
     <Compile Include="CompilerStages\StartUpStage.cs" />
     <Compile Include="ControlRegister.cs" />
     <Compile Include="GeneralPurposeRegister.cs" />
