--- a/Source/Mosa.Platform.x64/Mosa.Platform.x64.csproj
+++ b/Source/Mosa.Platform.x64/Mosa.Platform.x64.csproj
@@ -85,6 +85,7 @@
     <Compile Include="ArchitectureFeatureFlags.cs" />
     <Compile Include="BaseTransformationStage.cs" />
     <Compile Include="CompilerStages\InterruptVectorStage.cs" />
+    <Compile Include="CompilerStages\MultibootV1Stage.cs" />
     <Compile Include="Instructions\Adc32.cs" />
     <Compile Include="Instructions\Adc64.cs" />
     <Compile Include="Instructions\Add32.cs" />
