--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -255,6 +255,8 @@
     <Compile Include="Instructions\Shld32.cs" />
     <Compile Include="Instructions\Shr32.cs" />
     <Compile Include="Instructions\Shrd32.cs" />
+    <Compile Include="Instructions\Sqrtsd.cs" />
+    <Compile Include="Instructions\Sqrtss.cs" />
     <Compile Include="Instructions\Sti.cs" />
     <Compile Include="Instructions\Stos.cs" />
     <Compile Include="Instructions\Sub32.cs" />
