--- a/Source/Mosa.Runtime/Mosa.Runtime.csproj
+++ b/Source/Mosa.Runtime/Mosa.Runtime.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Builders\RuntimeCustomAttributeData.cs" />
     <Compile Include="Builders\RuntimeType.cs" />
     <Compile Include="Builders\RuntimeTypeInfo.cs" />
-    <Compile Include="ExceptionHandlerType.cs" />
+    <Compile Include="Metadata\ExceptionHandlerType.cs" />
     <Compile Include="IntPtrExtension.cs" />
     <Compile Include="Korlib\System.Runtime.CompilerServices\RuntimeHelpers.cs" />
     <Compile Include="Korlib\System\String.cs" />
