--- a/Source/Mosa.Plugin.Korlib/Mosa.Plug.Korlib.csproj
+++ b/Source/Mosa.Plugin.Korlib/Mosa.Plug.Korlib.csproj
@@ -4,12 +4,12 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{77961864-DB33-4189-804F-D774022C96E2}</ProjectGuid>
+    <ProjectGuid>{CBDEEF3C-BBE7-4655-A096-1367DE069E63}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.Runtime</AssemblyName>
+    <AssemblyName>Mosa.Plug.Korlib</AssemblyName>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
@@ -18,7 +18,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>
     </AppDesignerFolder>
-    <RootNamespace>Mosa.Runtime</RootNamespace>
+    <RootNamespace>Mosa.Plug.Korlib</RootNamespace>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -67,41 +67,19 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Builders\RuntimeAssembly.cs" />
-    <Compile Include="Builders\RuntimeCustomAttributeData.cs" />
-    <Compile Include="Builders\RuntimeType.cs" />
-    <Compile Include="Builders\RuntimeTypeInfo.cs" />
-    <Compile Include="Metadata\ExceptionHandlerType.cs" />
-    <Compile Include="IntPtrExtension.cs" />
-    <Compile Include="Metadata\CustomAttribute.cs" />
-    <Compile Include="Metadata\AssemblyDefinition.cs" />
-    <Compile Include="Metadata\CustomAttributeArgument.cs" />
-    <Compile Include="Metadata\CustomAttributeTable.cs" />
-    <Compile Include="Metadata\FieldDefinition.cs" />
-    <Compile Include="Metadata\TypeDefinition.cs" />
-    <Compile Include="Metadata\ProtectedRegionDefinition.cs" />
-    <Compile Include="Metadata\ProtectedRegionTable.cs" />
-    <Compile Include="Metadata\MethodDefinition.cs" />
-    <Compile Include="StartUp.cs" />
-    <Compile Include="GC.cs" />
-    <Compile Include="InternalsForArray.cs" />
-    <Compile Include="InternalsForObject.cs" />
-    <Compile Include="InternalsForType.cs" />
-    <Compile Include="Intrinsic.cs" />
-    <Compile Include="Plug\PlugAttribute.cs" />
-    <Compile Include="Internal.cs" />
-    <Compile Include="SimpleStackTraceEntry.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Mosa.Runtime.nuspec">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj">
       <Project>{631bc4f3-e2d8-4319-814c-13904caa17ce}</Project>
       <Name>Mosa.Korlib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj">
+      <Project>{77961864-db33-4189-804f-d774022c96e2}</Project>
+      <Name>Mosa.Runtime</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Plug.cs" />
+    <Compile Include="System.Runtime.CompilerServices\RuntimeHelpers.cs" />
+    <Compile Include="System\String.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
