--- a/Source/Mosa.Plug.Korlib/Mosa.Plug.Korlib.csproj
+++ b/Source/Mosa.Plug.Korlib/Mosa.Plug.Korlib.csproj
@@ -4,12 +4,12 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</ProjectGuid>
+    <ProjectGuid>{CBDEEF3C-BBE7-4655-A096-1367DE069E63}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.Runtime.x86</AssemblyName>
+    <AssemblyName>Mosa.Plug.Korlib</AssemblyName>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
@@ -18,7 +18,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>
     </AppDesignerFolder>
-    <RootNamespace>Mosa.Runtime.x86</RootNamespace>
+    <RootNamespace>Mosa.Plug.Korlib</RootNamespace>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -54,7 +54,7 @@
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>..\..\bin\Mosa.Runtime.x86.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Mosa.Runtime.xml</DocumentationFile>
     <FileAlignment>4096</FileAlignment>
     <Optimize>true</Optimize>
     <OutputPath>..\..\bin\</OutputPath>
@@ -67,13 +67,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Division.cs" />
-    <Compile Include="Internal.cs" />
-    <Compile Include="Korlib\System.Threading\Monitor.cs" />
-    <Compile Include="Korlib\System.Threading\Interlocked.cs" />
-    <Compile Include="Native.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj">
       <Project>{631bc4f3-e2d8-4319-814c-13904caa17ce}</Project>
       <Name>Mosa.Korlib</Name>
@@ -84,11 +77,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Mosa.Runtime.x86.nuspec">
-      <SubType>Designer</SubType>
-    </None>
+    <Compile Include="System.Runtime.CompilerServices\RuntimeHelpers.cs" />
+    <Compile Include="System\String.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
