--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -296,7 +296,7 @@
     <Compile Include="Intrinsics\Store.cs" />
     <Compile Include="Intrinsics\StoreR8.cs" />
     <Compile Include="Intrinsics\StoreR4.cs" />
-    <Compile Include="Linker\BaseLinker.cs" />
+    <Compile Include="Linker\MosaLinker.cs" />
     <Compile Include="Linker\Elf\ElfHeader.cs" />
     <Compile Include="Linker\Elf\ElfLinker.cs" />
     <Compile Include="Linker\Elf\FileType.cs" />
