--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -226,6 +226,7 @@
     <Compile Include="Instructions\Pushad.cs" />
     <Compile Include="Instructions\PXor.cs" />
     <Compile Include="Instructions\Rcr32.cs" />
+    <Compile Include="Instructions\RdMSR.cs" />
     <Compile Include="Instructions\Ret.cs" />
     <Compile Include="Instructions\RoundSD.cs" />
     <Compile Include="Instructions\RoundSS.cs" />
@@ -265,6 +266,7 @@
     <Compile Include="Instructions\Test32.cs" />
     <Compile Include="Instructions\Ucomisd.cs" />
     <Compile Include="Instructions\Ucomiss.cs" />
+    <Compile Include="Instructions\WrMSR.cs" />
     <Compile Include="Instructions\XAddLoad32.cs" />
     <Compile Include="Instructions\XChg32.cs" />
     <Compile Include="Instructions\XChgLoad32.cs" />
