--- a/Source/Mosa.Plug.Korlib/Mosa.Plug.Korlib.csproj
+++ b/Source/Mosa.Plug.Korlib/Mosa.Plug.Korlib.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Runtime\RuntimeType.cs" />
     <Compile Include="Runtime\RuntimeTypeInfo.cs" />
     <Compile Include="KorlibInternal.cs" />
+    <Compile Include="System.Runtime.CompilerServices\Unsafe.cs" />
     <Compile Include="System.Runtime.CompilerServices\RuntimeHelpersPlug.cs" />
     <Compile Include="System\ObjectPlug.cs" />
     <Compile Include="System\ArrayPlug.cs" />
