--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -94,6 +94,7 @@
     <Compile Include="ConstantOperand.cs" />
     <Compile Include="CIL\IRInstructions.cs" />
     <Compile Include="Counter.cs" />
+    <Compile Include="Intrinsics\SuppressStackFrame.cs" />
     <Compile Include="IR\Add32.cs" />
     <Compile Include="IR\Add64.cs" />
     <Compile Include="IR\AddCarryOut32.cs" />
@@ -459,14 +460,14 @@
     <Compile Include="BaseCompilerStage.cs" />
     <Compile Include="Platform\BasePlatformInstruction.cs" />
     <Compile Include="Platform\BasePlatformTransformationStage.cs" />
-    <Compile Include="Stages\CILProtectedRegionStage.cs" />
+    <Compile Include="Stages\ProtectedRegionStage.cs" />
     <Compile Include="CompilerStages\MetadataStage.cs" />
     <Compile Include="Stages\EnterSSAStage.cs" />
     <Compile Include="InstructionLogger.cs" />
     <Compile Include="Stages\LeaveSSAStage.cs" />
-    <Compile Include="Stages\OperandAssignmentStage.cs" />
+    <Compile Include="Stages\CILOperandAssignmentStage.cs" />
     <Compile Include="CompilerOptions.cs" />
-    <Compile Include="Stages\StaticAllocationResolutionStage.cs" />
+    <Compile Include="Stages\CILStaticAllocationResolutionStage.cs" />
     <Compile Include="Stages\CILTransformationStage.cs" />
     <Compile Include="CIL\ConstrainedPrefixInstruction.cs" />
     <Compile Include="CIL\ConversionInstruction.cs" />
