- Initial ESP32 Platform code

--- a/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
+++ b/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
@@ -45,7 +45,10 @@
     <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildESP32.cs" />
     <Compile Include="BuildARMv6.cs" />
+    <Compile Include="BuildESP32InstructionFiles.cs" />
+    <Compile Include="BuildESP32Instructions.cs" />
     <Compile Include="BuildARMv6Instructions.cs" />
     <Compile Include="BuildARMv6InstructionFiles.cs" />
     <Compile Include="BuildX64InstructionFiles.cs" />
